corpus/background.txt
========================================
Background - simple
========================================

printf "one" &

---

(program
    (command
        name: (variable_name)
        argument: (double_quote_string)))

========================================
Background - multiple
========================================

printf "one" & echo &

---

(program
    (command
        name: (variable_name)
        argument: (double_quote_string))
    (command name: (variable_name)))

========================================
Background - with redirect
========================================

printf > file &

---

(program
    (redirected_statement
        (command name: (variable_name))
        (file_redirect
            operator: (direction)
            destination: (variable_name))))
