corpus/begin_statement.txt
========================================
Begin Statement - simple
========================================

begin ;; end;

begin
    true
end

;; begin; # this is a begin statement
    # comment inside the block
end

---

(program
    (begin_statement)
    (begin_statement
        (command
            name: (variable_name)))
    (begin_statement (comment) (comment)))

========================================
Begin Statement - nested
========================================

begin; begin; end; end

begin
    begin; true; end
end

begin; begin; end; end
begin;;; begin;;  end; end

---

(program
    (begin_statement (begin_statement))
    (begin_statement (begin_statement (command name: (variable_name))))
    (begin_statement (begin_statement))
    (begin_statement (begin_statement)))

========================================
Begin Statement - with conditional execution
========================================

begin; end || true
true && begin; end || true

---

(program
    (conditional_execution
        (begin_statement)
        (command
            name: (variable_name)))
    (conditional_execution
        (command
            name: (variable_name))
        (conditional_execution
            (begin_statement)
            (command
                name: (variable_name)))))

========================================
Begin Statement - with redirection
========================================

begin; end >&-

---

(program
    (redirection (begin_statement)))

========================================
Begin Statement - with pipe
========================================

begin; end | echo

---

(program
    (pipe
        (begin_statement)
        (command
            name: (variable_name))))

========================================
Begin Statement - invalid
========================================

begin & end
begin && end
begin | end
begin > end
begin < end
begin 0>&0 end

---

(program
    (begin_statement (ERROR))
    (begin_statement (ERROR))
    (begin_statement (ERROR))
    (begin_statement (ERROR))
    (begin_statement (ERROR))
    (begin_statement 
        (redirection
            (command name: (variable_name)))))
