corpus/concatenation.txt
========================================
Concatenation - two single quote strings
========================================

'ec''ho'

---

(program
    (command
        name: (concatenation
            (single_quote_string)
            (single_quote_string))))

========================================
Concatenation - two double quote strings
========================================

"ec""ho"

---

(program
    (command
        name: (concatenation
            (double_quote_string)
            (double_quote_string))))

========================================
Concatenation - two mixed strings
========================================

"ec"'ho'

---

(program
    (command
        name: (concatenation
            (double_quote_string)
            (single_quote_string))))

========================================
Concatenation - multiple mixed strings
========================================

"ec"'ho'"lo""cate"

---

(program
    (command
        name: (concatenation
            (double_quote_string)
            (single_quote_string)
            (double_quote_string)
            (double_quote_string))))

========================================
Concatenation - single quote string with escape sequence
========================================

'echo'\

---

(program
    (command
        name: (concatenation
            (single_quote_string)
            (escape_sequence))))

========================================
Concatenation - multiple single quote strings with escape sequence
========================================

'echo'\ 'location'\
'procedure'

---

(program
    (command
        name: (concatenation
            (single_quote_string)
            (escape_sequence)
            (single_quote_string)
            (escape_sequence)
            (single_quote_string))))


========================================
Concatenation - double quote string with escape sequence
========================================

"echo"\

---

(program
    (command
        name: (concatenation
            (double_quote_string)
            (escape_sequence))))

========================================
Concatenation - multiple double quote strings with escape sequence
========================================

"echo"\ "location"\
"procedure"

---

(program
    (command
        name: (concatenation
            (double_quote_string)
            (escape_sequence)
            (double_quote_string)
            (escape_sequence)
            (double_quote_string))))

========================================
Concatenation - mixed strings with escape sequence
========================================

"echo"\ 'location'\
'procedure'

---

(program
    (command
        name: (concatenation
            (double_quote_string)
            (escape_sequence)
            (single_quote_string)
            (escape_sequence)
            (single_quote_string))))

========================================
Concatenation - double quote strings with escape sequence and variable expansion
========================================

"cmd$CURR_CMD"\ "$CMD_SUFFIX"

---

(program
    (command
        name: (concatenation
            (double_quote_string (variable_expansion))
            (escape_sequence)
            (double_quote_string (variable_expansion)))))

========================================
Concatenation - mixed quote strings with escape sequence and variable expansion
========================================

'cmd$CURR_CMD'\
"$CMD_SUFFIX"

---

(program
    (command
        name: (concatenation
            (single_quote_string)
            (escape_sequence)
            (double_quote_string (variable_expansion)))))


========================================
Concatenation - variable expansion concat
========================================

$PATH\ 'ological'
$PATH\ "ological"
---

(program
    (command
        name: (concatenation
            (variable_expansion)
            (escape_sequence)
            (single_quote_string)))
    (command
        name: (concatenation
            (variable_expansion)
            (escape_sequence)
            (double_quote_string))))
