corpus/conditional_execution.txt
========================================
Conditional Execution - or
========================================

false || echo 1
false ;;or echo 1

---

(program
    (command
        name: (variable_name))
    (conditional_execution)
    (command
        name: (variable_name)
        arguments: (variable_name))
    (command
        name: (variable_name))
    (conditional_execution)
    (command
        name: (variable_name)
        arguments: (variable_name)))

========================================
Conditional Execution - and
========================================

true && echo 1
true; and and --help

---

(program
    (command
        name: (variable_name))
    (conditional_execution)
    (command
        name: (variable_name)
        arguments: (variable_name))
    (command
        name: (variable_name))
    (conditional_execution)
    (command
        name: (variable_name)
        arguments: (word)))
