test/corpus/background.txt
================================================================================
Background - simple
================================================================================

printf "one" &

--------------------------------------------------------------------------------

(program
  (command
    name: (word)
    argument: (double_quote_string
      (string_content))))

================================================================================
Background - multiple
================================================================================

printf "one" & echo &

--------------------------------------------------------------------------------

(program
  (command
    name: (word)
    argument: (double_quote_string
      (string_content)))
  (command
    name: (word)))

================================================================================
Background - with redirect
================================================================================

printf > file &

--------------------------------------------------------------------------------

(program
  (command
    name: (word)
    redirect: (file_redirect
      operator: (direction)
      destination: (word))))
