test/corpus/bracket_expansion.txt
========================================
Bracket Expansion - empty
========================================

{,}
{,,,}
{,,,,,}

---

(program
    (command
        name: (bracket_expansion))
    (command
        name: (bracket_expansion))
    (command
        name: (bracket_expansion)))

========================================
Bracket Expansion - missing comma
========================================

{a}
{}

---

(program
    (command
        name: (bracket_expansion
            (variable_name)
            (MISSING ",")))
    (command
        name: (bracket_expansion
            (MISSING ","))))

========================================
Bracket Expansion - single value
========================================

{name,}
{,name}
{,name,}
{,,,name,}
{,,,name,,,,,}

---

(program
    (command
        name: (bracket_expansion (variable_name)))
    (command
        name: (bracket_expansion (variable_name)))
    (command
        name: (bracket_expansion (variable_name)))
    (command
        name: (bracket_expansion (variable_name)))
    (command
        name: (bracket_expansion (variable_name))))

========================================
Bracket Expansion - with escapes
========================================

{\ ,\'}
{t\ est,}
{,,'lit\'eral',}

---

(program
    (command
        name: (bracket_expansion
            (escape_sequence)
            (escape_sequence)))
    (command
        name: (bracket_expansion
            (concatenation
                (variable_name)
                (escape_sequence)
                (variable_name))))
    (command
        name: (bracket_expansion
                (single_quote_string (escape_sequence)))))

========================================
Bracket Expansion - with variable_expansion
========================================

{,$PATH}
{,$PATH[1]}
{\$PATH,$env}
{$$ref,$arr}

---

(program
    (command
        name: (bracket_expansion
            (variable_expansion (variable_name))))
    (command
        name: (bracket_expansion
            (concatenation
                (variable_expansion (variable_name))
                (list_element_access (index)))))
    (command
        name: (bracket_expansion
            (concatenation (escape_sequence) (variable_name))
            (variable_expansion (variable_name))))
    (command
        name: (bracket_expansion
            (variable_expansion (variable_name))
            (variable_expansion (variable_name)))))

========================================
Bracket Expansion - with otherwise special characters
========================================

{<,>,~,#}
{^,&}
{|,;}

---

(program
    (command
        name: (bracket_expansion
            (word) (word) (word) (word)))
    (command
        name: (bracket_expansion (word) (word)))
    (command
        name: (bracket_expansion (word) (word))))

========================================
Bracket Expansion - with around string concat
========================================

{a,b}c
$PATH{a,b}c

---

(program
    (command
        name: (concatenation
            (bracket_expansion (variable_name) (variable_name))
            (variable_name)))
    (command
        name: (concatenation
            (variable_expansion (variable_name))
            (bracket_expansion (variable_name) (variable_name))
            (variable_name))))

========================================
Bracket Expansion - proper distinction between vars and words
========================================

{a+b,b}

---

(program
    (command
        name: (bracket_expansion (word) (variable_name))))


========================================
Bracket Expansion - requires comma between expressions
========================================

{,b b}

---

(program
    (command
        name: (bracket_expansion (variable_name) (ERROR (UNEXPECTED '}')))))

========================================
Bracket Expansion - expanded single var
========================================

{$PATH}

---

(program
    (command
        name: (bracket_expansion
            (variable_expansion (variable_name)))))

========================================
Bracket Expansion - with glob
========================================

{,*}
{,*/**/*.test}.ts

---

(program
    (command
        name: (bracket_expansion (glob)))
    (command
        name: (concatenation
            (bracket_expansion
                (concatenation
                    (glob) (word) (glob) (word) (glob) (word)))
            (word))))
